2003/08/09 23:31 pcg

	* Makefile.PL: some more Win32 and command.com fixes.

2003/08/08 12:09 muppetman

	* Gtk2.pm, README: pod updates, bump version to 0.93

	* Makefile.PL: use makefile variables for manpage extensions (idea
	suggested by Roderich Schupp, thanks)

	* genkeysyms.pl: add pod to generated file

2003/08/06 23:19 rwmcfa1

	* Makefile.PL: .pm -> .3pm copy and paste bug corrected, spotted by 
	James Curbo

2003/08-06 16:58 ggc

	* xs/GtkWidget.xs: add gtk_widget_size_request

2003/08/06 12:57 muppetman

	* xs/GtkWindow.xs: plug a memleak in list_toplevels

	* xs/GtkWidget.xs: ->get_clipboard

2003/08/05 22:16 muppetman

	* pm/SimpleList.pm: pod patch from James Curbo

2003/08/01 12:45 muppetman

	* MANIFEST, Gtk2.pm, README, Makefile.PL: updated for 0.92 release

2003/07/31 20:00 muppetman

	* Gtk2.pm: mention Gtk2::api and Gtk2::SimpleList manpages

	* Makefile.PL: install api.pod so perldoc can find it.

	* examples/simplelist.pl, pm/SimpleList.pm, t/19.GtkSimpleList.t: add
	simple interfaces to editable text cells and index-based selection
	handling; modify and clarify other pod.

	* xs/GtkTextView.xs: fixed get_iter_at_location to work correctly.

	* gtk-demo/textview.pl: clean up some flotsam and jetsam

	* CodeGen.pm: register GEnum and GFlags types with the bindings,
	so they can be used as column types

2003/07/29 22:06 rwmcfa1

	* pm/SimpleList.pm: first pass at pod documentation done, small version
	bump, the on load warning has been removed.

	* examples/simplelist.pl, t/19.GtkSimpleList.t: added examples/tests
	for a more complex custom column type, sum_of_array, it better shows
	the power of the custom column system.

2003/07/29 14:52 rwmcfa1

	* pm/SimpleList.pm: added code to allow users (well programmers anyway) 
	to define their own column types, scalar impelements this in a simple
	example. this is very powerful and very cool, check it out.

	* t/19.GtkSimpleList.t, examples/simplelist.pl: make use of and