@@ -11,10 +11,11 @@ Marc Lehmann             pcg at goof dot com
 
 Contributors - the people who sent us patches
 =============================================
-René Seindal     rene at seindal dot dk
-Tom Hargreaves   hex at freezone dot co dot uk
-Thierry Vignaud  tvignaud at mandrakesoft dot com
-James Curbo      hannibal at adtrw dot org
+René Seindal         rene at seindal dot dk
+Tom Hargreaves       hex at freezone dot co dot uk
+Thierry Vignaud      tvignaud at mandrakesoft dot com
+James Curbo          hannibal at adtrw dot org
+Torsten Schoenfeld   kaffeetisch at web dot de
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk source code, so credit goes to those guys as
